# risk-assessment-long-term-investment

./: Dockerfile  README.md  calc.py  pyproject.toml
.devcontainer/: devcontainer.json
