[tool.poetry]
name = "risk-assessment-long-term-investment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
